logo, login page plus header

--- a/i18n/page_messages_et.properties
+++ b/i18n/page_messages_et.properties
@@ -910,7 +910,7 @@ was_invalid_at_row = was invalid at row
 
 was_updated_succesfully = \ was updated successfully.
 
-welcome = Tere tulemast OpenClinica küsitluskeskkonda, 
+welcome = Tere tulemast cosi küsitluskeskkonda,
 
 width_decimal_unavailable_for_single_multi_checkbox_radio = width_decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio"
 
