--- a/i18n/page_messages_nl.properties
+++ b/i18n/page_messages_nl.properties
@@ -784,7 +784,7 @@ the_specified_user_not_exits = De opgegeven gebruiker bestaat niet.
 
 the_specified_user_role_not_exits_for_study = De opgegeven gebruikersrol bestaat niet voor de opgegeven studie.
 
-the_study_has_been_updated_succesfully = De Studie is gewijzigd.
+the_study_has_been_updated_succesfully = De studie is gewijzigd.
 
 the_study_subject_ID_used_by_another_in_study_site = The Study Subject ID has been used by another Subject in the destination Study/Site. Study Subject ID must be unique within a Study, so change the ID before reassigning this Subject.
 
@@ -910,7 +910,7 @@ was_invalid_at_row = was invalid at row
 
 was_updated_succesfully = \ zijn gewijzigd.
 
-welcome = Welkom bij cosi5
+welcome = Welkom bij cosi
 
 width_decimal_unavailable_for_single_multi_checkbox_radio = width_decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio"
 
