--- a/i18n/page_messages_pt.properties
+++ b/i18n/page_messages_pt.properties
@@ -910,7 +910,7 @@ was_invalid_at_row = was invalid at row
 
 was_updated_succesfully = \ foi atualizado com sucesso.
 
-welcome = Bem-vindo ao cosi5,
+welcome = Bem-vindo ao cosi,
 
 width_decimal_unavailable_for_single_multi_checkbox_radio = width_decimal is unavailable for "single-select", "multi-select", "chechbox" and "radio"
 
