--- a/i18n/words_nl.properties
+++ b/i18n/words_nl.properties
@@ -125,7 +125,7 @@ OTH = OTH
 
 October = oktober
 
-OpenClinica = OpenClinica
+OpenClinica = LibreClinica
 
 Openclinica_Release_1_1 = Openclinica Release 1.1, Akaza Research 2002-2004.<br>Optimized for Internet Explorer 5.5 and above.<br>
 
@@ -1419,7 +1419,7 @@ one_name_per_line = een naam per regel
 
 only_year_of_birth = Alleen geboortejaar
 
-openclinica = OpenClinica
+openclinica = LibreClinica
 
 openclinica_enterprise = OpenClinica Enterprise
 
