--- a/i18n/words_pt.properties
+++ b/i18n/words_pt.properties
@@ -125,7 +125,7 @@ OTH = OTH
 
 October = Outubro
 
-OpenClinica = OpenClinica
+OpenClinica = LibreClinica
 
 Openclinica_Release_1_1 = Openclinica Release 1.1, Akaza Research 2002-2004.<br>Optimized for Internet Explorer 5.5 and above.<br>
 
@@ -1418,7 +1418,7 @@ one_name_per_line = um nome por linha
 
 only_year_of_birth = Apenas ano de nascimento
 
-openclinica = OpenClinica
+openclinica = LibreClinica
 
 openclinica_enterprise = OpenClinica Enterprise
 
