--- a/i18n/words_ru.properties
+++ b/i18n/words_ru.properties
@@ -125,7 +125,7 @@ OTH = OTH
 
 October = 10
 
-OpenClinica = OpenClinica
+OpenClinica = LibreClinica
 
 Openclinica_Release_1_1 = Openclinica Release 1.1, Akaza Research 2002-2004.<br> \u041E\u043F\u0442\u0438\u043C\u0438\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u0430 \u0434\u043B\u044F Internet Explorer 5.5 \u0438 \u0432\u044B\u0448\u0435. <br>
 
@@ -1418,7 +1418,7 @@ one_name_per_line = \u043E\u0434\u043D\u043E \u043D\u0430\u0437\u0432\u0430\u043
 
 only_year_of_birth = \u0422\u043E\u043B\u044C\u043A\u043E \u0433\u043E\u0434 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F
 
-openclinica = OpenClinica
+openclinica = LibreClinica
 
 openclinica_enterprise = OpenClinica Enterprise
 
